--- a/androidApp/src/main/res/layout/activity_main.xml
+++ b/androidApp/src/main/res/layout/activity_main.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".MainActivity">
 
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/membersRecyclerView"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    app:layout_constraintBottom_toTopOf="@id/platformMessage"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
   <TextView
-    android:id="@+id/main_text"
+    android:id="@+id/platformMessage"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="5sp"
     android:layout_gravity="center"
-    android:text="Hello World!"
+    android:gravity="center_horizontal"
     android:textAlignment="center"
-    android:textSize="42sp" />
+    android:textSize="22sp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/membersRecyclerView"
+    tools:text="Platform" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
