--- a/iosApp/KmpGithub/KmpGithub/MemberCellTableViewCell.xib
+++ b/iosApp/KmpGithub/KmpGithub/MemberCellTableViewCell.xib
@@ -18,8 +18,9 @@
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mP4-fI-60q">
                         <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="A5W-hi-JKq"/>
-                            <constraint firstAttribute="width" constant="80" id="R0C-p4-pI9"/>
+                            <constraint firstAttribute="height" constant="80" id="hiC-HO-UzQ"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="kM9-HS-0Qt"/>
+                            <constraint firstAttribute="width" constant="80" id="v8L-tr-Ax1"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ola-kY-04f">
@@ -35,8 +36,14 @@
                     <constraint firstAttribute="trailing" secondItem="ola-kY-04f" secondAttribute="trailing" constant="16" id="OgY-fL-fBU"/>
                     <constraint firstItem="ola-kY-04f" firstAttribute="leading" secondItem="mP4-fI-60q" secondAttribute="trailing" constant="16" id="Q2D-Gc-gu6"/>
                     <constraint firstAttribute="bottom" secondItem="ola-kY-04f" secondAttribute="bottom" constant="16" id="Vgr-32-GJ9"/>
+                    <constraint firstAttribute="bottom" secondItem="mP4-fI-60q" secondAttribute="bottom" id="We0-MT-pDN"/>
+                    <constraint firstItem="mP4-fI-60q" firstAttribute="leading" secondItem="YNK-nf-F0M" secondAttribute="leading" id="d8f-bg-RBZ"/>
                     <constraint firstItem="ola-kY-04f" firstAttribute="top" secondItem="YNK-nf-F0M" secondAttribute="top" constant="16" id="e6r-it-Qmg"/>
+                    <constraint firstItem="mP4-fI-60q" firstAttribute="top" secondItem="YNK-nf-F0M" secondAttribute="top" id="nPk-L5-atA"/>
+                    <constraint firstAttribute="bottom" secondItem="mP4-fI-60q" secondAttribute="bottom" id="oYG-Hm-G7s"/>
+                    <constraint firstItem="mP4-fI-60q" firstAttribute="top" secondItem="YNK-nf-F0M" secondAttribute="top" id="q3A-w0-TWS"/>
                     <constraint firstAttribute="bottom" secondItem="mP4-fI-60q" secondAttribute="bottom" id="wkb-0p-qe9"/>
+                    <constraint firstItem="ola-kY-04f" firstAttribute="leading" secondItem="mP4-fI-60q" secondAttribute="trailing" constant="16" id="wvr-Zk-iRv"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
